After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742597 - SIGSEGV fatal error when running orca with SwingSet2
SIGSEGV fatal error when running orca with SwingSet2
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-01-08 16:13 UTC by Magdalen Berns (irc magpie)
Modified: 2015-02-27 16:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix error (14.28 KB, patch)
2015-01-17 01:29 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-01-08 16:13:00 UTC
Please see https://bugzilla.gnome.org/show_bug.cgi?id=742157#c10 upwards of bug 742157 for information about this bug.

Trace:

(gdb) thread apply all bt

Thread 16 (Thread 0x7f13206f6700 (LWP 9378))

  • #0 sem_wait
    at ../sysdeps/unix/sysv/linux/x86_64/sem_wait.S line 85
  • #1 os::signal_wait()
    at /usr/src/debug/java-1.8.0-openjdk-1.8.0.25-5.b18.fc21.x86_64/jdk8/hotspot/src/os/linux/vm/os_linux.cpp line 2536
  • #2 os::signal_wait()
    at /usr/src/debug/java-1.8.0-openjdk-1.8.0.25-5.b18.fc21.x86_64/jdk8/hotspot/src/os/linux/vm/os_linux.cpp line 2560
  • #3 signal_thread_entry(JavaThread*, Thread*)
    at /usr/src/debug/java-1.8.0-openjdk-1.8.0.25-5.b18.fc21.x86_64/jdk8/hotspot/src/share/vm/runtime/os.cpp line 244
  • #4 JavaThread::thread_main_inner()
    at /usr/src/debug/java-1.8.0-openjdk-1.8.0.25-5.b18.fc21.x86_64/jdk8/hotspot/src/share/vm/runtime/thread.cpp line 1706
  • #5 java_start(Thread*)
    at /usr/src/debug/java-1.8.0-openjdk-1.8.0.25-5.b18.fc21.x86_64/jdk8/hotspot/src/os/linux/vm/os_linux.cpp line 827
  • #6 start_thread
    at pthread_create.c line 310
  • #7 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 109

Comment 1 Magdalen Berns (irc magpie) 2015-01-17 01:29:02 UTC
Created attachment 294724 [details] [review]
Patch to fix error

There was a SIGEV fatal error when running orca meaning the J2SE-access-bridge script was not identified. This was caused by some dodgy jni initialization and also a configuration bug in the keymaps. Resolving the issues allows the program to init but there is still some locking up in the g_cond(wait) to resolve
Comment 2 André Klapper 2015-02-27 16:57:26 UTC
[Moving at-spi/java-atk-wrapper bugs to separate product. See bug 740075]